--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,8 @@
 	url = git@github.com:OCA/reporting-engine.git
 	branch = 13.0
 
+
+[submodule "OCA/server-ux"]
+	path = OCA/server-ux
+	url = git@github.com:OCA/server-ux.git
+	branch = 13.0
