--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,8 @@
 	url = git@github.com:OCA/account-invoicing.git
 	branch = 13.0
 
+
+[submodule "OCA/account-financial-tools"]
+	path = OCA/account-financial-tools
+	url = git@github.com:OCA/account-financial-tools.git
+	branch = 13.0
