[ADD] submodule OCA/queue

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,8 @@
 	path = OCA/account-financial-tools
 	url = git@github.com:OCA/account-financial-tools.git
 	branch = 13.0
+
+[submodule "OCA/queue"]
+	path = OCA/queue
+	url = git@github.com:OCA/queue.git
+	branch = 13.0
