--- a/.gitmodules
+++ b/.gitmodules
@@ -41,9 +41,20 @@
 [submodule "OCA/partner-contact"]
 	path = OCA/partner-contact
 	url = git@github.com:OCA/partner-contact.git
+	branch = 13.0
 [submodule "OCA/product-attribute"]
 	path = OCA/product-attribute
 	url = git@github.com:OCA/product-attribute.git
+	branch = 13.0
 [submodule "OCA/community-data-files"]
 	path = OCA/community-data-files
 	url = git@github.com:OCA/community-data-files.git
+	branch = 13.0
+[submodule "OCA/edi"]
+	path = OCA/edi
+	url = https://github.com/OCA/edi.git
+	branch = 13.0
+[submodule "OCA/connector"]
+	path = OCA/connector
+	url = https://github.com/OCA/connector
+	branch = 13.0
