--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "OCA/sale-reporting"]
 	path = OCA/sale-reporting
 	url = https://github.com/OCA/sale-reporting.git
+[submodule "SerpentCS_Contributions"]
+	path = SerpentCS_Contributions
+	url = https://github.com/JayVora-SerpentCS/SerpentCS_Contributions
