--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,54 @@
 [submodule "OCA/l10n-spain"]
 	path = OCA/l10n-spain
-	url = git@github.com:OCA/l10n-spain.git
+	url = https://github.com/OCA/l10n-spain.git
 	branch = 13.0
 
 [submodule "OCA/account-financial-reporting"]
 	path = OCA/account-financial-reporting
-	url = git@github.com:OCA/account-financial-reporting.git
+	url = https://github.com/OCA/account-financial-reporting.git
 	branch = 13.0
 
 [submodule "OCA/reporting-engine"]
 	path = OCA/reporting-engine
-	url = git@github.com:OCA/reporting-engine.git
+	url = https://github.com/OCA/reporting-engine.git
 	branch = 13.0
 
 [submodule "OCA/server-ux"]
 	path = OCA/server-ux
-	url = git@github.com:OCA/server-ux.git
+	url = https://github.com/OCA/server-ux.git
 	branch = 13.0
 
 [submodule "OCA/bank-payment"]
 	path = OCA/bank-payment
-	url = git@github.com:OCA/bank-payment.git
+	url = https://github.com/OCA/bank-payment.git
 	branch = 13.0
 
 [submodule "OCA/account-invoicing"]
 	path = OCA/account-invoicing
-	url = git@github.com:OCA/account-invoicing.git
+	url = https://github.com/OCA/account-invoicing.git
 	branch = 13.0
 
 
 [submodule "OCA/account-financial-tools"]
 	path = OCA/account-financial-tools
-	url = git@github.com:OCA/account-financial-tools.git
+	url = https://github.com/OCA/account-financial-tools.git
 	branch = 13.0
 
 [submodule "OCA/queue"]
 	path = OCA/queue
-	url = git@github.com:OCA/queue.git
+	url = https://github.com/OCA/queue.git
 	branch = 13.0
 [submodule "OCA/partner-contact"]
 	path = OCA/partner-contact
-	url = git@github.com:OCA/partner-contact.git
+	url = https://github.com/OCA/partner-contact.git
 	branch = 13.0
 [submodule "OCA/product-attribute"]
 	path = OCA/product-attribute
-	url = git@github.com:OCA/product-attribute.git
+	url = https://github.com/OCA/product-attribute.git
 	branch = 13.0
 [submodule "OCA/community-data-files"]
 	path = OCA/community-data-files
-	url = git@github.com:OCA/community-data-files.git
+	url = https://github.com/OCA/community-data-files.git
 	branch = 13.0
 [submodule "OCA/edi"]
 	path = OCA/edi
